# snowscooter_detector

./: .gitignore  LICENSE.md  README.md  config_inference.yaml  config_training.yaml  predict.sh  pyproject.toml  train.sh  train_hpc.sh
.devcontainer/: devcontainer.json
inference/: _utils.py  config.yaml  config_inference.yaml  get_metrics.py  pred_test.py  predict.ipynb  predict.py  predict_hpc.py  run_hr.py  segments.py
model/: custom_model.py
model/esresnet/: base.py
snowscooter_vs_birds/: mix_birds_snowscooter.py  mix_snow_birds.ipynb
training/: config_hpc.yaml  config_training.yaml
training/ignite_trainer/: __init__.py  _trainer.py
training/lightning_trainer/: _utils.py  datamodule.py  sampler.py  train_pipeline.py  trainingmodule.py
training/testing/: analysis.py  ben_ray_false_negatives.csv  ben_ray_false_positives.csv  ben_ray_gt_all_all.pickle  ben_ray_preds_all_all.pickle  get_auc_roc.py  test.ipynb  test.py
utils/: analysing_ray_results.ipynb  audio_processing.py  audio_signal.py  length_audio.py  parsing_utils.py  transforms.py  utils_inference.py  utils_testing.py  utils_training.py
