[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Benjamin"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
librosa = "^0.9.1"
SoundFile = "^0.10.3"
matplotlib = "^3.5.2"
termcolor = "^1.1.0"
pytorch-ignite = "^0.4.8"
visdom = "^0.1.8"
ftfy = "^6.1.1"
regex = "^2022.4.24"
torchsummary = "^1.5.1"
ray = {extras = ["tune"], version = "^1.12.0"}
mlflow = "^1.25.1"
pydub = "^0.25.1"
bayesian-optimization = "^1.2.0"
pytorch-lightning = "1.6.3"
audiomentations = "^0.25.1"
torch = "1.11.0"
torchvision = "0.12.0"
torchaudio = "0.11.0"
"fs.sshfs" = "^1.0.1"
fs = "^2.4.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
